Atualizando página de produtos, trazendo cada produto na sua url, e adicionando filtro

--- a/site-loja/produtos.html
+++ b/site-loja/produtos.html
@@ -28,19 +28,30 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav m-auto">
                         <li class="nav-item">
-                            <a class="nav-link active botoes_nav" aria-current="page" href="produtos.html">Todos os produtos</a>
+                            <a class="nav-link active botoes_nav" aria-current="page" href="produtos.html">Todos os
+                                produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active botoes_nav" aria-current="page" href="produtos.html?categoria=tenis">Tênis</a>
+                            <a class="nav-link active botoes_nav" aria-current="page"
+                                href="produtos.html?categoria=tenis ">Tênis</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active botoes_nav" aria-current="page" href="produtos.html?categoria=camisetas">Camisetas</a>
+                            <a class="nav-link active botoes_nav" aria-current="page"
+                                href="produtos.html?categoria=camisetas">Camisetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active botoes_nav" aria-current="page" href="produtos.html?categoria=oculos">Óculos</a>
+                            <a class="nav-link active botoes_nav" aria-current="page"
+                                href="produtos.html?categoria=oculos">Óculos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active botoes_nav" aria-current="page" href="unidades.html">Unidades</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <button class="btn dropdown-toggle botoes_nav" data-bs-toggle="dropdown"
+                                aria-expanded="false"><span class="texto_filtro">Filtrar</span></button>
+                            <ul class="dropdown-menu filtro">
+
+                            </ul>
                         </li>
                     </ul>
                 </div>
