--- a/site-loja/form.html
+++ b/site-loja/form.html
@@ -96,9 +96,35 @@
                         </div>
                     </div>
                 </div>
+                <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="toast-header">
+                            <strong class="me-auto"><i class="bi bi-check-circle-fill icone_sucesso"></i>
+                                Sucesso!!!</strong>
+                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                        <div class="toast-body">
+                            <label> Parabéns, o produto <span id="sucesso-produto"></span> foi Cadastrado</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                    <div id="liveToastError" class="toast toast-error" role="alert" aria-live="assertive"
+                        aria-atomic="true">
+                        <div class="toast-header">
+                            <strong class="me-auto"><i class="bi bi-check-circle-fill icone_sucesso"></i>
+                               Errado!!!</strong>
+                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                        <div class="toast-body">
+                            <label> Parabéns, o produto <span id="sucesso-produto"></span> foi Cadastrado</label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
